@@ -1,0 +1,3 @@
+config.cache
+config.log
+config.status
