@@ -1,6 +1,10 @@
 Package: RPgSQL
-Version: 0.4
-Author: Timothy H. Keitt
-Description: Ties data frames to a relational database
-Depends: none
+Version: 0.5-1
+Date: Mon Feb  7 19:07:40 PST 2000
+Title: PostgreSQL access
+Author: Timothy H. Keitt <keitt@nceas.ucsb.edu>
+Description: Provides methods for accessing data stored in PostgreSQL
+	     tables.
+Depends: R (>=0.99)
 License: GPL (version 2 or higher; see LICENSE)
+URL: http://www.nceas.ucsb.edu/~keitt/R/
