@@ -1,1 +1,1 @@
-RPgSQL	Relational database access
+RPgSQL          PostgreSQL access
