@@ -2,24 +2,63 @@ dnl Process this file with autoconf to produce a configure script.
 AC_INIT(src/RPgSQL.c)
 
 dnl Checks for libraries.
-AC_CHECK_LIB(crypt, crypt)
-AC_CHECK_LIB(pq, PQconnectdb)
+AC_CHECK_LIB(crypt, crypt, FOUND_LIBCRYPT=1)
+if test $FOUND_LIBCRYPT; then
+   PKG_LIBS="-lcrypt"
+else
+   echo
+   echo Either libcrypt is missing or does not contain
+   echo the function crypt.  RPgSQL will not compile
+   echo without libcrypt.
+   echo
+   exit 1
+fi
+
+if test $PG_LIB_DIR; then
+   PKG_LIBS="${PKG_LIBS} -lpq"
+#   PKG_LDFLAGS="-L${PG_LIB_DIR}"
+   PKG_LIBS="-L${PG_LIB_DIR} ${PKG_LIBS}"
+else
+   AC_CHECK_LIB(pq, PQconnectdb, FOUND_LIBPQ=1)
+   if test $FOUND_LIBPQ; then
+      PKG_LIBS="$PKG_LIBS -lpq"
+   else
+      echo
+      echo I could not find your libpq.  Either it is missing
+      echo or is installed in a non-standard location.  If libpq
+      echo is installed, set PG_LIB_DIR to the directory containing
+      echo libpq and reinstall the RPgSQL package.  PG_LIB_DIR
+      echo only needs to be set during package installation,
+      echo not while running RPgSQL.
+      echo
+      exit 1
+   fi
+fi
 
 dnl Checks for header files.
-dnl Following courtesy of Kurt Hornik
-for dir in \
-    /usr/include \
-    /usr/include/pgsql \
-    /usr/include/postgresql \
-    /usr/local/include \
-    /usr/local/include/pgsql \
-    /usr/local/include/postgresql \
-    /opt/include \
-    /opt/include/pgsql \
-    /opt/include/postgresql; do
-    AC_CHECK_HEADER(${dir}/libpq-fe.h, PKG_CPPFLAGS="-I${dir}")
-    if test $PKG_CPPFLAGS; then break; fi
-done
-AC_SUBST(PKG_CPPFLAGS)
+if test $PG_INCLUDE_DIR; then
+   AC_CHECK_HEADER(${PG_INCLUDE_DIR}/libpq-fe.h, FOUND_LIBPQ_FE_H=1)
+else
+   AC_CHECK_HEADER(libpq-fe.h, FOUND_LIBPQ_FE_H=1)
+fi
 
-AC_OUTPUT(src/Makefile)
+if test $FOUND_LIBPQ_FE_H; then
+   PKG_CPPFLAGS="-I${PG_INCLUDE_DIR}"
+else
+   echo
+   echo I could not find the include file libpq-fe.h.
+   echo Either it is missing or installed in a non-standard
+   echo location.  If libpq-fe.h is installed, set PG_INCLUDE_DIR
+   echo to the directory containing libpq-fe.h.  PG_INCLUDE_DIR
+   echo only needs to be set during package installation, not
+   echo while running RPgSQL.
+   echo
+   exit 1
+fi
+
+AC_SUBST(PKG_CPPFLAGS)
+AC_SUBST(PKG_LIBS)
+#AC_SUBST(PKG_LDFLAGS)
+AC_SUBST(PKG_CFLAGS)
+AC_SUBST(PKG_FFLAGS)
+AC_OUTPUT(src/Makevars)
