@@ -1,0 +1,5 @@
+PKG_CPPFLAGS=@PKG_CPPFLAGS@
+PKG_LIBS=@PKG_LIBS@
+PKG_LDFLAGS=@PKG_LDFLAGS@
+PKG_CFLAGS=@PKG_CFLAGS@
+PKG_FFLAGS=@PKG_FFLAGS@
